# mif

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  clone_third_party.sh  download_third_party.sh
cmake/: github_source.cmake  install.cmake  library.cmake  local_source.cmake  options.cmake  settings.cmake  third_party.cmake  third_party_paths.cmake  version.cmake
docs/: Chapter-1.md  Chapter-2.md  Chapter-3.md  Chapter-4.md  Chapter-5.md  Chapter-6.md  Home.md  MIF.-Home-page.md
examples/_doc/chapters/chapter3/advanced_echo_service/: CMakeLists.txt
examples/_doc/chapters/chapter3/advanced_echo_service/src/: main.cpp
examples/common/cmake/: mif.cmake  settings.cmake
examples/common/include/common/: client.h
examples/complex_type/: CMakeLists.txt
examples/complex_type/client/src/: main.cpp
examples/complex_type/config/: config.json  config.xml
examples/complex_type/server/src/: main.cpp  my_company.cpp  my_company_service.cpp  my_company_service.h
examples/configs/: config.json  config.xml
examples/db_client/: CMakeLists.txt
examples/db_client/src/: main.cpp
examples/hello_world/: CMakeLists.txt
examples/hello_world/client/src/: main.cpp
examples/hello_world/common/include/common/id/: service.h
examples/hello_world/common/include/common/interface/: ihello_world.h
examples/hello_world/common/include/common/ps/: ihello_world.h
examples/hello_world/server/src/: hello_world.cpp  hello_world_service.cpp  hello_world_service.h  main.cpp
examples/http/: CMakeLists.txt
examples/http/client/src/: main.cpp
examples/http/config/: config.json
examples/http/server/src/: hello_world.cpp  main.cpp  service.cpp
examples/http_crud/: CMakeLists.txt
examples/http_crud/config/: config.json  config.xml
examples/http_crud/db/: schema.sql
examples/http_crud/src/: employee_service.cpp  employee_service.h  main.cpp
examples/http_crud/src/data/: data.h
examples/http_crud/src/data/meta/: data.h
examples/http_echo_server/: CMakeLists.txt
examples/http_echo_server/config/: config.json  config.xml
examples/http_echo_server/src/: main.cpp
examples/inheritance/: CMakeLists.txt
examples/inheritance/client/src/: main.cpp
examples/inheritance/server/src/: main.cpp  service.cpp
examples/microservices/: CMakeLists.txt
examples/microservices/common/include/common/data/: data.h
examples/microservices/common/include/common/data/meta/: data.h
examples/microservices/common/include/common/id/: service.h
examples/microservices/common/include/common/interface/: iemployee_storage.h
examples/microservices/common/include/common/interface/ps/: iemployee_storage.h
examples/microservices/config/: service.xml  service_config.json  storage.json  storage_config.xml
examples/microservices/service/src/: employee_service.cpp  main.cpp
examples/microservices/service/src/data/: responses.h
examples/microservices/service/src/data/meta/: responses.h
examples/microservices/service/src/id/: service.h
examples/microservices/storage/src/: main.cpp  pg_employee_storage.cpp
examples/orm/: CMakeLists.txt
examples/orm/src/: main.cpp
examples/proto_stack/: CMakeLists.txt
examples/proto_stack/client/src/: main.cpp
examples/proto_stack/common/include/common/: protocol_chain.h
examples/proto_stack/common/include/common/id/: service.h
examples/proto_stack/common/include/common/interface/: iface.h
examples/proto_stack/common/include/common/ps/: iface.h
examples/proto_stack/server/src/: main.cpp  service.cpp  service.h
examples/reflection/: CMakeLists.txt
examples/reflection/src/: main.cpp
examples/visitor/: CMakeLists.txt
examples/visitor/client/src/: main.cpp
examples/visitor/common/include/common/: protocol_chain.h
examples/visitor/common/include/common/id/: service.h
examples/visitor/common/include/common/interface/: iface.h
examples/visitor/common/include/common/ps/: iface.h
examples/visitor/server/src/: main.cpp  service.cpp
include/mif/application/: application.h  http_server.h  iconfig.h  net_base_application.h  tcp_service.h  tcp_service_client.h
include/mif/application/id/: config.h
include/mif/binding/python/: module.h
include/mif/common/: crc32.h  creator.h  hash_calc.h  icollection.h  index_sequence.h  log.h  log_init.h  static_string.h  thread_pool.h  types.h  unused.h  uuid_generator.h
include/mif/common/detail/: hierarchy.h  method.h  tuple_utility.h  type_logic_funcs.h
include/mif/db/: iconnection.h  iconnection_pool.h  irecordset.h  istatement.h  transaction.h
include/mif/db/id/: service.h
include/mif/net/: client.h  client_factory.h  clients_chain.h  http_clients.h  http_server.h  iclient_factory.h  iconnection.h  icontrol.h  ihandler.h  ipublisher.h  isubscriber.h  isubscriber_factory.h  tcp_clients.h  tcp_server.h
include/mif/net/clients/: frame_reader.h  frame_writer.h  gzip_compressor.h  gzip_decompressor.h  parallel_handler.h
include/mif/net/http/: clients.h  codes.h  connection.h  constants.h  iinput_pack.h  ioutput_pack.h  irequest.h  iresponse.h  iweb_service.h  methods.h  (+5 more)
include/mif/orm/: common.h  forward.h  schema.h  storage.h  structure.h
include/mif/reflection/: reflect_type.h  reflection.h
include/mif/remote/: factory.h  proxy_client.h  proxy_stub.h  ps.h  ps_client.h  stub_client.h
include/mif/serialization/: boost.h  json.h  traits.h  xml.h
include/mif/service/: create.h  creator.h  external.h  factory.h  icheckable.h  ifactory.h  ilocator.h  inherited_list.h  ipool.h  iservice.h  iservice_factory.h  make.h  root_locator.h  service_factory.h
src/: main.cpp
src/mif/application/: application.cpp  http_server.cpp  net_base_application.cpp  tcp_service.cpp  tcp_service_client.cpp
src/mif/common/: config.h.in  hash_calc.cpp  log.cpp  thread_pool.cpp  uuid_generator.cpp  version.h.in
src/mif/db/: transaction.cpp
src/mif/net/: client.cpp  http_clients.cpp  http_server.cpp  tcp_clients.cpp  tcp_server.cpp
src/mif/remote/: factory.cpp
src/mif/service/: external.cpp  locator.cpp  per_thread_pool.cpp  pool.cpp
template/: CMakeLists.txt
template/src/: main.cpp
(+182 files in other folders)
